// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s176cloo-0 fCVWXD"
  >
    <li>
      <a
        active={true}
        className="oehxgn-0-LinkButton-fjdEfS lNRvL"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s176cloo-0 fCVWXD"
  >
    <li>
      <a
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        active={true}
        className="oehxgn-0-LinkButton-fjdEfS lNRvL"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        active={false}
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
    <li>
      <a
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s176cloo-0 fCVWXD"
  >
    <li>
      <a
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        active={false}
        className="oehxgn-0-LinkButton-fjdEfS bKbONs"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        active={true}
        className="oehxgn-0-LinkButton-fjdEfS lNRvL"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
  </ul>
</div>
`;
